# Merovingian

./: .clang-format  .clang-tidy  .clangd  .codecov.yml  .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG-pre-beta.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  Dockerfile  README.md  SECURITY.md  build-wsl.cmd  build.py  e2ee_logs.txt  meson.build  meson.options  the-merovingian-productization-roadmap.md  the-merovingian-project-plan.md  wsl-build.cmd
src/: AGENTS.md  CLAUDE.md  db_migrate.cpp  main.cpp  meson.build
src/auth/: AGENTS.md  client_server_api.cpp  identity.cpp  key_api.cpp  meson.build  session.cpp  token.cpp
src/canonicaljson/: AGENTS.md  meson.build  parser.cpp  serializer.cpp  signable.cpp  value.cpp  yyjson_adapter.c  yyjson_adapter.h
src/config/: AGENTS.md  config.cpp  config_parser.cpp  meson.build  reload_plan.cpp  reload_policy.cpp  runtime_config.cpp
src/core/: AGENTS.md  file_descriptor.cpp  file_metadata.cpp  meson.build  query_params.cpp  secret_buffer.cpp
src/crypto/: CLAUDE.md  constant_time.cpp  ed25519.cpp  ipc_auth_key.cpp  master_key.cpp  meson.build  random.cpp  secret_box.cpp  signing_service.cpp  token_key.cpp
src/database/: AGENTS.md  connection.cpp  meson.build  migration.cpp  migration_files.cpp  persistent_store.cpp  postgresql_store.cpp  runtime_database.cpp  schema.cpp  sqlite_store.cpp  statement.cpp
src/events/: AGENTS.md  CLAUDE.md  authorization.cpp  event.cpp  event_id.cpp  event_signer.cpp  meson.build  redaction.cpp  state_resolution.cpp
src/federation/: CLAUDE.md  cached_server_discovery.cpp  dispatch_worker.cpp  event_query.cpp  inbound_ingestion.cpp  inbound_request.cpp  key_query.cpp  membership_endpoints.cpp  meson.build  mvp.cpp  outbound_membership.cpp  outbound_transaction.cpp  remote_key_cache.cpp  runtime_federation.cpp  security.cpp  server_discovery.cpp  transactions.cpp
src/federation_worker/: args.cpp  main.cpp  meson.build  worker_event_loop.cpp  worker_event_loop.hpp
src/homeserver/: AGENTS.md  auth_service.cpp  client_server.cpp  client_server_mvp.cpp  federation_proxy.cpp  federation_request_routing.cpp  http_server.cpp  local_demo_flow.cpp  local_http_router.cpp  local_services.cpp  local_services.hpp  local_smoke_flow.cpp  media_service.cpp  meson.build  room_service.cpp  runtime.cpp  space_hierarchy.cpp  tls.cpp  vertical_slice.cpp  worker_env.cpp  worker_pool.cpp  worker_supervisor.cpp
src/http/: AGENTS.md  connection_guard.cpp  meson.build  outbound_client.cpp  rate_limit.cpp  request.cpp  request_limits.cpp
src/ipc/: channel.cpp  federation_ipc_frames.cpp  ipc_ed25519_provider.cpp  meson.build
src/media/: AGENTS.md  meson.build  repository.cpp  runtime_media.cpp  security.cpp  thumbnail_worker_main.cpp  thumbnailer.cpp
src/net/: AGENTS.md  listener.cpp  meson.build  shutdown_signal.cpp  tcp_acceptor.cpp  thread_pool.cpp
src/observability/: AGENTS.md  meson.build  observability.cpp
src/platform/: AGENTS.md  elf_probe.cpp  file_metadata.cpp  hardening_self_check.cpp  meson.build  runtime_hardening.cpp  seccomp_hardening.cpp
src/rooms/: AGENTS.md  encryption_policy.cpp  meson.build  room_version_policy.cpp
src/sync/: AGENTS.md  meson.build  sliding_sync_extensions.cpp  sliding_sync_parser.cpp  sliding_sync_room_builder.cpp  sliding_sync_room_list.cpp  stream_token.cpp  sync_filter.cpp  sync_notifier.cpp
src/trust_safety/: AGENTS.md  meson.build  policy_engine.cpp
tests/: .clang-tidy  federation_signing_test_support.hpp  matrix_e2ee_two_user_test.py  matrix_e2ee_windows_test.py  meson.build
tests/conformance/: AGENTS.md  CLAUDE.md  test_canonicaljson_parser.cpp  test_canonicaljson_serializer.cpp  test_client_server_conformance.cpp  test_event_auth_rules.cpp  test_event_authorization.cpp  test_event_graph_conformance.cpp  test_event_relationships_conformance.cpp  test_events.cpp  test_federation_conformance.cpp  test_federation_transaction_conformance.cpp  test_identifier_grammar.cpp  test_key_publication_conformance.cpp  test_main.cpp  test_outbound_delivery_conformance.cpp  test_pdu_format_conformance.cpp  test_redaction_conformance.cpp  test_room_version_table_conformance.cpp  test_server_discovery.cpp  test_signing_json_conformance.cpp  test_sliding_sync_conformance.cpp  test_state_resolution_conformance.cpp  test_sync_filter_conformance.cpp  test_x_matrix_auth_parsing.cpp
tests/fixtures/: AGENTS.md
tests/fuzz/: AGENTS.md  CLAUDE.md  fuzz_canonicaljson.cpp  fuzz_config_parser.cpp  fuzz_http_request.cpp  fuzz_query_params.cpp  fuzz_srv_record.cpp  fuzz_stream_token.cpp  fuzz_sync_filter.cpp  meson.build
tests/integration/: AGENTS.md  test_client_server_flow.cpp  test_client_server_mvp_flow.cpp  test_federation_inbound_flow.cpp  test_federation_outbound_flow.cpp  test_federation_worker_flow.cpp  test_homeserver_vertical_slice_flow.cpp  test_http_server_listener_flow.cpp  test_live_synapse_federation.cpp  test_main.cpp  test_media_repository_security.cpp  test_media_thumbnail_flow.cpp  test_observability_flow.cpp  test_persistent_homeserver_flow.cpp  test_postgresql_persistence_flow.cpp  test_runtime_hardening_flow.cpp  test_seccomp_sqlite_flow.cpp  test_server_startup_hardening_flow.cpp  test_sliding_sync_flow.cpp  test_sync_complement_fixture.cpp  test_trust_safety_policy_flow.cpp
tests/sanitizer/: tsan.supp
tests/smoke/: AGENTS.md  meson.build
tests/support/: AGENTS.md  json_test_support.hpp  master_key.hpp  registration_token.hpp  temp_directory.hpp
tests/tooling/: test_ci_workflow.py  test_coverage_workflow.py  test_dependency_wraps.py  test_example_config.py  test_hooks.py  test_live_integration_registration.py  test_packages_workflow.py  test_release_workflow.py  test_rewrite_merovingian_includes.py  test_security_workflows.py
tests/unit/: AGENTS.md  test_audit_filter.cpp  test_auth.cpp  test_auth_client_server_api.cpp  test_auth_session.cpp  test_canonicaljson_parser.cpp  test_canonicaljson_serializer.cpp  test_client_server.cpp  test_client_server_conformance.cpp  test_client_server_mvp.cpp  test_config_client_rate_limits.cpp  test_config_parser.cpp  (+91 more)
(+288 files in other folders)
