option('hardening', type: 'boolean', value: true, description: 'Enable compiler and linker hardening flags where supported')
option('build_tests', type: 'boolean', value: true, description: 'Build unit tests')
option('build_live_tests', type: 'boolean', value: false, description: 'Build opt-in live federation integration tests against external homeservers')
option('build_fuzz', type: 'boolean', value: false, description: 'Build fuzz harness targets')
option('strict_ci_gates', type: 'boolean', value: true, description: 'Enable CI-oriented static source gates')
option('static_curl_wrap', type: 'boolean', value: false, description: 'Use vendored curl wrap instead of system libcurl (for static-PIE builds where the system curl.a lacks static psl/idn2/unistring archives)')
